@@ -12,7 +12,7 @@ replace restart {
 	; peephole 0w removed dead load.
 } if notVolatile(%1), notVolatile(%2), notUsed(%1)
 
-replace {
+replace restart {
 	ld	%1, %2
 	ld	%2, %1
 } by {
@@ -20,7 +20,7 @@ replace {
 	; peephole 1 removed redundant load from %1 into %2.
 } if notVolatile(%1), notVolatile(%2)
 
-replace {
+replace restart {
 	ldw	%1, %2
 	ldw	%2, %1
 } by {
@@ -35,6 +35,14 @@ replace {
 //	; peephole 1b loaded %3 from %2 directly instead of going through %1.
 //	ld	%3, %2
 //} if canAssign(%3 %2), notVolatile(%1), notUsed(%1)
+
+replace restart {
+	ld	%1, a
+	exg	a, %1
+} by {
+	ld	%1, a
+	; peephole 1a removed redundant exg.
+} if notVolatile(%1)
 
 replace restart {
 	pop	%1
